<resources>
    <string name="app_name">TripPlanner</string>

    <string name="title_email">Email</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="title_password">Password</string>
    <string name="title_activity_triplist">TriplistActivity</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="visited">Visited</string>
    <string name="country">Country</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="already_visited">Already visited</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="new_triplist_item">New Triplist Item</string>
    <string name="edit_triplist_item">Edit Triplist Item</string>
    <string name="nav_header_title">TripPlanner</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="network_error">Network request error occurred</string>

    <string-array name="category_items">
        <item>Outdoors</item>
        <item>Beaches</item>
        <item>Sightseeing</item>
        <item>Skiing</item>
        <item>Business</item>
    </string-array>

    <string name="info">Information</string>
    <string name="create_comment">Create comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="temperature">Current temperature</string>
    <string name="current_weather">Current weather</string>
    <string name="current_weather_description">Current weather desc</string>
    <string name="title">Title</string>
    <string name="post">Comment</string>
    <string name="nick">Nickname</string>
    <string name="share">Share</string>
    <string name="main_desc">Main</string>
    <string name="not_visited">Not yet visited</string>
    <string name="useful">Useful</string>
    <string name="identifier">Identifier</string>
    <string name="user_name_title">Name</string>
    <string name="missing_email">Please enter your email</string>
    <string name="missing_password">Please enter your password</string>

    <string name="app_icon_desc">Application icon</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="missing_email_or_password">Please enter email and password</string>
    <string name="missing_register_fields">Please fill in all registration fields</string>
    <string name="shared_image_desc">Shared image</string>
    <string name="share_fab">Add new share</string>
    <string name="like">Like</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="nickname">Nickname</string>
    <string name="comment">Comment</string>
    <string name="image_selected">Image selected</string>
    <string name="no_image">No image</string>
    <string name="pick_image">Pick image</string>
    <string name="clear_image">Clear image</string>
    <string name="loading">Loading...</string>
    <string name="prog_travelguide">Travel guide badge</string>
    <string name="prog_baggage">Baggage badge</string>
    <string name="prog_worldwide">Worldwide badge</string>
    <string name="prog_astronaut">Astronaut badge</string>
    <string name="title_name">Name</string>
    <string name="missing_title">Please enter a title</string>
</resources>
